Minor fixes
Founders flexbox alignment fixed.
CTA arrow overlap fixed.

--- a/css/amlcmu.webflow.css
+++ b/css/amlcmu.webflow.css
@@ -103,7 +103,7 @@ a {
   -ms-flex-align: stretch;
   align-items: stretch;
   border-radius: 5px;
-  background-color: #f5f5f5;
+  background-color: #f0f0f0;
   -webkit-transition: all 200ms ease-in;
   transition: all 200ms ease-in;
 }
@@ -568,7 +568,7 @@ a {
 .member-image-block {
   overflow: hidden;
   /* width: 200px; */
-  /* height: 200px; */
+  height: 250px;
   margin-bottom: 20px;
   border-radius: 5px;
   -webkit-filter: grayscale(100%);
@@ -679,6 +679,7 @@ a {
   .mission-blocks-grid {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
+    grid-row-gap: 30px;
   }
   .mission-block {
     width: 70%;
@@ -832,7 +833,7 @@ a {
     width: 80%;
   }
   .full-vh-centre-align {
-    margin-top: 60px;
+    margin-top: 120px;
     margin-bottom: 60px;
   }
   .foundergrid {
@@ -892,6 +893,14 @@ a {
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+  }
+  .founder-image-block {    
+    width: 100%;
+    height: 300px;
   }
 }
 
@@ -927,6 +936,14 @@ a {
     grid-row-gap: 60px;
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
+  }
+}
+
+/* *** to prevent arrow overlap on ultra small screens *** */
+@media screen and (max-width: 430px){
+  .arrow{
+    display: block;
+    margin-top:10px;
   }
 }
 
